--- a/app/package.json
+++ b/app/package.json
@@ -25,6 +25,7 @@
     "@nestjs/common": "^11.0.1",
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/throttler": "^6.5.0",
     "@redis/client": "^5.5.6",
     "helmet": "^8.1.0",
     "knex": "^3.1.0",
@@ -36,11 +37,11 @@
     "zod": "^3.25.56"
   },
   "devDependencies": {
-    "@nestjs/swagger": "^11.2.0",
     "@eslint/eslintrc": "^3.2.0",
     "@eslint/js": "^9.18.0",
     "@nestjs/cli": "^11.0.0",
     "@nestjs/schematics": "^11.0.0",
+    "@nestjs/swagger": "^11.2.0",
     "@nestjs/testing": "^11.0.1",
     "@swc/cli": "^0.6.0",
     "@swc/core": "^1.10.7",
