--- a/docker/prod/nginx/nginx.conf
+++ b/docker/prod/nginx/nginx.conf
@@ -10,9 +10,8 @@ http {
             proxy_pass http://node:8080;
 
             proxy_set_header Host $http_host;
-            proxy_set_header X-Forward-For $remote_addr;
             proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Appengine-Remote-Addr $remote_addr;
+            proxy_set_header X-Forward-For $proxy_add_x_forwarded_for;
         }
     }
 }
