Fix: Docker Compose healthcheck script for Postgres

--- a/docker/dev/docker-compose.yml
+++ b/docker/dev/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     restart: unless-stopped
     working_dir: /var/local/app
     ports:
-      - 80:80
+      - "80:80"
     volumes:
       - ../../app:/var/local/app
     healthcheck:
@@ -46,7 +46,7 @@ services:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: nestjs-postgres-db
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
+      test: ["CMD-SHELL", "pg_isready -U $${POSTGRES_USER} -d $${POSTGRES_DB}"]
       interval: 10s
       timeout: 5s
       retries: 3
