--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "module": "commonjs",
+    "esModuleInterop": true,
     "declaration": true,
     "removeComments": true,
     "emitDecoratorMetadata": true,
@@ -22,6 +23,6 @@
   "exclude": [
     "node_modules",
     "src/infrastructure/db/migrations",
-    "src/infrastructure/db/seeds",
+    "src/infrastructure/db/seeds"
   ]
 }
